Renamed project Added MacOS to .gitignore

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lucius-digital/testrepe",
+    "name": "lucius-digital/openlucius-project",
     "description": "OpenLucius",
     "type": "project",
     "license": "GPL-2.0-or-later",
