composer.json update

--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,7 @@
                 "<bg=yellow;fg=black>                </>",
                 "  * Install guide: https://www.getlucius.com/en/product/open-source-install-guide",
                 "  * End-user guide: https://www.getlucius.com/en/product/groups-channels",
-                "  * Get support: https://www.drupal.org/project/openlucius",
+                "  * Get support: https://www.drupal.org/project/issues/openlucius",
                 "  * Remove the plugin that prints this message:",
                 "      composer remove drupal/core-project-message",
                 ""
