--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "composer/installers": "^1.2",
         "lucius-digital/openlucius": "dev-master",
         "drupal/core-project-message": "^9",
-        "drupal/core-composer-scaffold": "^9"
+        "drupal/core-composer-scaffold": "9.0.0-beta2"
     },
     "require-dev": {
         "drush/drush": "^10.2"
