--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	},
     "require": {
         "composer/installers": "^1.2",
-        "lucius-digital/openlucius": "^2",
+        "drupal/openlucius": "^2",
         "drupal/core-project-message": "^9",
         "drupal/core-composer-scaffold": "^9"
     },
